force-app/main/default/objects/Contract_Term_Report__c/Contract_Term_Report__c.object-meta.xml
<CustomObject>
    <description>Created for Reporting Snaphot to allow Executive Reporting on Active Contracts in this Quarter vs. Previous Quarters (trend analysis) - Contract Term Reporting.  Populated from Informatica Cloud monthly.</description>
    <label>Contract Term Report</label>
    <nameField>
        <displayFormat>CTR--{0000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Term Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>