force-app/main/default/objects/Contract_Term_Report__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>