force-app/main/default/objects/Contract_Term_Report__c/fields/Contract_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Contract_Purpose__c</fullName>
    <label>Contract Purpose</label>
    <type>TextArea</type>
</CustomField>