force-app/main/default/objects/Contract_Term_Report__c/fields/Contract_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Record_Type__c</fullName>
    <label>Contract Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>