force-app/main/default/objects/Contract_Term_Report__c/fields/Contract_Title__c.field-meta.xml
<CustomField>
    <fullName>Contract_Title__c</fullName>
    <label>Contract Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>