force-app/main/default/objects/Contract_Term_Report__c/fields/LTC__c.field-meta.xml
<CustomField>
    <fullName>LTC__c</fullName>
    <label>LTC</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>