force-app/main/default/objects/Contract_Term_Report__c/fields/Years_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Years_Remaining__c</fullName>
    <label>Years Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>